vespa/vespa-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vespa-ingress
  annotations:
    networking.k8s.io/ingress.class: contour
    ingress.kubernetes.io/force-ssl-redirect: "true" # Redirect HTTP to HTTPS
    cert-manager.io/cluster-issuer: letsencrypt-prod  # For automated TLS certificates using Cert-Manager
spec:
  tls:
  - hosts:
    - index.whgazetteer.org
    secretName: vespa-tls-secret
  rules:
  - host: index.whgazetteer.org
    http:
      paths:
      - path: /search
        pathType: Prefix
        backend:
          service:
            name: vespa-search
            port:
              number: 8080
